# generative-art

./: .gitignore
2024/clojure/1-test-project/: README.md  flake.nix  project.clj
2024/clojure/2-triangle-split/: flake.nix  package-lock.json
2024/clojure/triangle-split/: shadow-cljs.edn
2024/clojure/triangle-split/public/: index.html
2024/gmic/: flake.nix  shell.nix
2024/gmic/template/: flake.nix
2024/haskell/: flake.nix
2024/haskell/1-polygon-splitting/: CHANGELOG.md
2024/haskell/1-polygon-splitting/app/: Main.hs
2024/haskell/2-pong/: sand-simulation
2024/haskell/2-pong/app/: Main.hs
2024/haskell/2-sand-simulation/: CHANGELOG.md  ghcid.sh  sand-simulation.cabal
2024/haskell/2-sand-simulation/app/: Main.hs
2024/haskell/3-real-sand-simulation/: CHANGELOG.md  cabal.project.freeze  flake.nix  ghcid.sh  real-sand-simulation.cabal  shell.nix
2024/haskell/3-real-sand-simulation/app/: Main.hs
2024/haskell/3-real-sand-simulation/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
2024/haskell/3-real-sand-simulation/test/projectname/: CHANGELOG.md  README.md  package.yaml
2024/haskell/3-real-sand-simulation/test/projectname/app/: Main.hs
2024/haskell/4-improved-sand-simulation/: hie.yaml  real-sand-simulation.cabal  scratch.hs
2024/haskell/4-improved-sand-simulation/app/: Main.hs
2024/haskell/4-improved-sand-simulation/test/projectname/: projectname.cabal
2024/haskell/test/: test.cabal
2024/python/: Pipfile  flake.nix
2024/python/1-first/: main.py
2024/python/3-color-circles/: main.py
2024/python/3-color-circles/2-project/: main.py
2024/python/4-project/: backupprevector.py  main.py
2024/python/4-triangle-splitting/: Pipfile  main.py  test-numpy.py  test.py
2024/python/natives/linux-amd64/: libOpenXLSX.so.debug  libamd.so.2  libamd.so.2.4.1  libamd.so.2.4.1.debug  libarpack.so.2  libarpack.so.2.0.0  libarpack.so.2.0.0.debug  libblas.so.3  libcamd.so.2  libcamd.so.2.4.1  libcamd.so.2.4.1.debug  libccolamd.so.2  libccolamd.so.2.9.1  libccolamd.so.2.9.1.debug  libcholmod.so.3  libcholmod.so.3.0.6  libcolamd.so.2  (+56 more)
2024/typescript/1-triangle-split/: README.md  index.html
2024/typescript/2-bark/: flake.nix
2024/typescript/lang-test/: package-lock.json  package.json
2024/typescript/template/: index.html  package-lock.json  run.js
2024/typescript/triangle-split/: .gitignore  README.md  package-lock.json  tsconfig.json.template
(+33 files in other folders)
