cabal-version:      3.0
name:               real-sand-simulation
version:            0.1.0.0
synopsis:           Cellular automata of falling sand.
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             saygo-png
maintainer:         saygo.mail@proton.me
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable real-sand-simulation
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1, gloss
    hs-source-dirs:   app
    default-language: GHC2021
